infrastructure/orchestration/kubernetes/infrastructure/rabbitmq/01-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: saasodoo
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: messaging
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/component: messaging
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4.2.0-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
              protocol: TCP
            - containerPort: 15672
              name: management
              protocol: TCP
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          resources:
            limits:
              cpu: "2000m"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: rabbitmq-data
          hostPath:
            path: /mnt/cephfs/rabbitmq_data
            type: DirectoryOrCreate
