infrastructure/orchestration/kubernetes/infrastructure/rabbitmq/03-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq
  namespace: saasodoo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rabbitmq.62.171.153.219.nip.io`)
      kind: Rule
      services:
        - name: rabbitmq
          port: 15672
